--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js "
+    "start": "node index.js "
   },
   "author": "Allan Maina",
   "license": "ISC",
@@ -23,5 +23,7 @@
     "mongoose": "^5.6.2",
     "multer": "^1.4.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  }
 }
