--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.2",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "node-static": "^0.7.11",
+    "nodemailer": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
