add uploads folder

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,10 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-uploads/
+uploads/*
+
+# exception to the rule
+!uploads/.gitkeep
 
 # TypeScript v1 declaration files
 typings/
